logs/Slang/generic/class/class_test_46.sv.log
name: class_test_46
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:8:2: error: unknown macro or compiler directive '`uvm_component_utils'
 `uvm_component_utils(my_type)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:9:2: error: unknown macro or compiler directive '`uvm_component_utils_begin'
 `uvm_component_utils_begin(my_type)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:10:4: error: unknown macro or compiler directive '`uvm_field_object'
   `uvm_field_object(blah1, F1)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:11:4: error: unknown macro or compiler directive '`uvm_field_event'
   `uvm_field_event(blah2, F2)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:12:4: error: unknown macro or compiler directive '`uvm_field_string'
   `uvm_field_string(blah3, F3)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_46.sv:13:2: error: unknown macro or compiler directive '`uvm_component_utils_end'
 `uvm_component_utils_end
 ^
